fixed the font size in the contact cards in small media

--- a/Css/style.css
+++ b/Css/style.css
@@ -289,6 +289,10 @@ section {
     .main h3 {
         font-size: 1.4em;
     }
+    
+    .contact .card-contanier .card .info p {
+        font-size: 1.3em;
+    }
 }
 
 @media (max-width:478px) {
